welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:11: error: not found: value nbr
  if(nbr>=3){gauche()}
     ^