welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
while(!sortieTrouvee()){
  while(!crossing()){
    
    var nbr:Int=0
    avance()
    if(nbr>=3){
      nbr=nbr+1
    }
      
  }
  if(nbr>=3){gauche()}
  else{
    droite()
  }
}